# DataCore

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  install.sh
include/: CoreTypes.h  DataCore.h  buffer.h  estructura.h  obj.h  structure.h  stuctura.h  waiter.h
src/: DataCore.c  array.c  coreTypes.c  hast.c  printD.c  tablaH.c  treeH.c  waiter.c
src/structures/: array.c  buffer.c  bufferC.c  main.c  tablaH.c  treeH.c
test/: CMakeLists.txt  DataCoreT.c  bufferTest.c  circularBufferTest.c  coroutine.c
